syntax = "proto3";
package cities;
import "google/protobuf/any.proto";
import "base.proto";
import "country.proto";
import "school.proto";

service CityService {
  rpc getById(Id) returns (GetOneResponse) {}
  rpc getList(QueryCity) returns (GetListResponse) {}
  rpc create(City) returns (GetOneResponse) {}
  rpc update(City) returns (GetOneResponse) {}
  rpc delete(Id) returns (DeleteResponse) {}
}
message City {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional string name = 7;
  optional int32 countryId = 8;
  optional Country country = 9;
  repeated School schools = 10;
}
message QueryCity {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional int32 page = 7;
  optional int32 limit = 8;
  optional string sortBy = 9;
  optional string sortOrder = 10;
  optional string name = 11;
  optional int32 countryId = 12;
}

message GetListResponse {
  string message = 1;
  optional int32 totalItems = 2;
  optional int32 perPage = 3;
  optional int32 totalPages = 4;
  optional int32 page = 5;
  repeated City data = 6;
}

message GetOneResponse {
  string message = 1;
  optional City data = 2;
}